@@ -9,7 +9,7 @@
 }
 \usage{
 BarText(height, b, labels = height, beside = FALSE, horiz = FALSE,
-        cex = par("cex"), adj = NULL, top = TRUE, ...)
+        cex = par("cex"), adj = NULL, top = TRUE, offset = 0, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -32,7 +32,10 @@ BarText(height, b, labels = height, beside = FALSE, horiz = FALSE,
 \item{adj}{one or two values in [0, 1] which specify the x (and optionally y) adjustment of the labels. On most devices values outside that interval will also work.}
 
 \item{top}{logical, defining if the labels should be placed on top of the bars (id beside is set to \code{TRUE}). Will be ignored if \code{beside} is \code{FALSE}.}
-  \item{\dots}{the dots are passed to the \code{\link{text}}.
+
+\item{offset}{a vector indicating how much the bars should be shifted relative to the x axis.}
+
+\item{\dots}{the dots are passed to the \code{\link{text}}.
 %%     ~~Describe \code{\dots} here~~
 }
 }
