@@ -11,9 +11,11 @@ NEW FUNCTIONS ADDED:
 
 UPDATED FUNCTIONS:
   * RevCode() has been extended to process factors and logicals too. 
+  * BarText() will support offset by now.
   
 BUGFIXES:
   * TMod() will not insert empty columns, when results are output to Word.
+
 
 
 
